RESOLVED FIXED 97869
TreeScope should not use node->shadowAncestorNode()
https://bugs.webkit.org/show_bug.cgi?id=97869
Summary TreeScope should not use node->shadowAncestorNode()
Shinya Kawanaka
Reported 2012-09-27 23:31:31 PDT
We should use node->shadowHost() here.
Attachments
Patch (1.32 KB, patch)
2012-09-27 23:52 PDT, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-09-27 23:52:42 PDT
WebKit Review Bot
Comment 2 2012-10-01 23:15:20 PDT
Comment on attachment 166155 [details] Patch Clearing flags on attachment: 166155 Committed r130121: <http://trac.webkit.org/changeset/130121>
WebKit Review Bot
Comment 3 2012-10-01 23:15:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.