TreeScope should not use node->shadowAncetorNode() https://bugs.webkit.org/show_bug.cgi?id=97869

Reviewed by Ryosuke Niwa.

TreeScope uses shadowAncestorNode(), but we should use shadowHost() here. shadowAncestorNode() is deprecated.

No new tests, simple refactoring.

* dom/TreeScope.cpp:
(WebCore::TreeScope::ancestorInThisScope):


Canonical link: https://commits.webkit.org/116121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130121 268f45cc-cd09-0410-ab3c-d52691b4dbfc